# apia-py

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
apia/: __init__.py  exceptions.py  manifest.py  registry.py
tests/: test_apia.py
