[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apia"
version = "0.1.0"
description = "Python SDK for APIA — AI-native API manifests standard"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "APIA Community" }]
keywords = ["apia", "api", "ai", "agents", "llm", "manifests"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "httpx>=0.24.0",
]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "ruff", "mypy"]

[project.urls]
Homepage = "https://github.com/Komsomol39/apia-standard"
Repository = "https://github.com/Komsomol39/apia-py"
Issues = "https://github.com/Komsomol39/apia-py/issues"

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.mypy]
python_version = "3.9"
strict = true